Fix: formato data brasileiro

--- a/index.html
+++ b/index.html
@@ -708,11 +708,11 @@
           <div class="form-row">
             <div class="form-group">
               <label class="form-label">Data Início</label>
-              <input type="date" class="form-input" id="receita-data-inicio">
+              <input type="text" class="form-input" id="receita-data-inicio" placeholder="DD/MM/AAAA" maxlength="10">
             </div>
             <div class="form-group">
               <label class="form-label">Data Fim</label>
-              <input type="date" class="form-input" id="receita-data-fim">
+              <input type="text" class="form-input" id="receita-data-fim" placeholder="DD/MM/AAAA" maxlength="10">
               <div class="form-hint">Deixe vazio se contrato vigente</div>
             </div>
           </div>
